# midied

android/: .gitignore  build.gradle  settings.gradle
android/app/: adb-route-tcp.md  build.gradle  proguard-rules.pro  service.md
android/app/src/androidTest/java/xyz/cofe/mitrenier/: ExampleInstrumentedTest.java
android/app/src/androidTest/java/xyz/cofe/mitrenier/rhino/: RhinoTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/xyz/cofe/mitrenier/andr/: AndroidApp.java  AndroidAppService.java  AppServices.java
android/app/src/main/res/layout/: activity_anima.xml  activity_main.xml  import_msong.xml  interval_analyze_activity.xml  song_edit.xml  song_list_item.xml  songs_list.xml  webserv_activity.xml
android/app/src/main/res/menu/: main.xml
android/app/src/main/res/uk/uuid/slf4j/android/: config.properties
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/xml/: file_paths.xml
android/app/src/main/resources/: wasm
android/app/src/test/java/xyz/cofe/mitrenier/: ExampleUnitTest.java
android/common/: build.gradle
android/common/src/main/java/xyz/cofe/mitrenier/: IO.java  LazySingle.java  Listeners.java  UnBind.java
android/common/src/main/java/xyz/cofe/mitrenier/file/: UnixPath.java
android/common/src/main/java/xyz/cofe/mitrenier/json/: GsonConfigure.java  InstantTypeAdapter.java  JSON.java  LongAsStringOrNumberTypeAdapter.java
android/common/src/main/java/xyz/cofe/mitrenier/math/: DurationRange.java  FlatMapListener.java  FlatMapSetListener.java  FlatMap_MapToSet_Listener.java  Fraction.java  IFraction.java  Interval.java  IntervalManager.java  IntervalTree.java  MapEventListener.java  MapSynchronizer.java  ObservableNavigableMap.java  ObservableNavigableSet.java  PerfCounter.java  Scale.java  SetEventListener.java  SetSynchronizer.java  SortedMapToNavigableMap.java  SortedSetToNavigableSet.java  Stat.java
android/common/src/main/java/xyz/cofe/mitrenier/midi/: MidPortInLogger.java  MidiEvent.java  MidiEventCollector.java  MidiEventJsonView.java  MidiNote.java  MidiPortIn.java  MidiPortOut.java  MidiPortOutCapture.java  MidiPortOutDump.java  MidiPortOutEvent.java  MidiPortOutNull.java  PlayService.java  Player.java  RawMidiEvent.java  SortedMidiEvents.java  SvcPlayer.java
android/common/src/main/java/xyz/cofe/mitrenier/music/: Beat.java  ClickCollection.java  ClickInterval.java  ClickIntervalManager.java  MPattern.java  MPatternInfinityIterator.java  MPatternSongProvider.java  MidiSong.java  NoteClick.java  Pitch.java  Power.java  TimeBeats.java
android/common/src/main/java/xyz/cofe/mitrenier/str/: StrAlign.java  Template.java  Wildcard.java
android/common/src/test/java/xyz/cofe/mitrenier/: ASCII.java  LazySingleTest.java  MidiEventCollectTest.java
android/common/src/test/resources/capture/: capture1.json  midi-events.json  song1.midisongmt1b
android/common/src/test/resources/js/: song1.js
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/midi-player/: build.gradle
android/midi-player/android-midi-player/: build.gradle
android/midi-player/desktop-midi-player/: build.gradle
android/webserver/: jetty-android.md
android/webserver/webserver-app/: build.gradle
android/webserver/webserver-app/src/main/bash/: configure.sh
android/webserver/webserver-app/src/main/resources/help/: static-main-web.md
android/webserver/webserver-app/src/main/resources/static/: clients-api.js  emu-api.js  index.html  notes.js  run.sh  styles.css
android/webserver/webserver-base/: build.gradle
rust/: .gitignore  Cargo.toml
rust/base-ui/: Cargo.toml  index.html  readme.md
rust/base-ui/src/: app.rs  app_params.rs  lib.rs  spawn.rs  split_view.rs
rust/base-ui/src/coll/: id_list.rs  id_list_api.rs  id_set.rs  listener.rs  mod.rs
rust/base-ui/src/fs/: files_dialog.rs  fs_http.rs  fs_native.rs  fs_ram.rs  mod.rs  unix_path.rs
rust/base-ui/src/fs_ui/: files_dialog.rs  mod.rs
rust/base-ui/src/midi_receiver/: collector.rs  listener.rs  mod.rs
rust/base-ui/src/music_grid/: chrono_ext.rs  cursor_time_line.rs  domain.rs  grid.rs  mod.rs  move_tool.rs  note.rs  pitch_lines.rs  time_lines.rs  tool.rs  view_port.rs
rust/base-ui/src/plugin/: mod.rs
rust/base-ui/src/store/: file_content.rs  mod.rs  store_panel.rs
rust/fs/: Cargo.toml
rust/fs-client/: Cargo.toml
rust/fs-client/src/: main.rs
rust/fs/src/: api.rs  api_adopt.rs  fs_http.rs  fs_native.rs  fs_ram.rs  lib.rs
rust/midi-model/: Cargo.toml
rust/midi-model/src/: click_tracker.rs  event_time.rs  events.rs  events_json.rs  events_json_conv.rs  events_raw.rs  interval.rs  lib.rs  named_pitches.rs  notes.rs  pitch.rs
rust/midi-model/src/midi_input/: http_midi_input_client.rs  mod.rs
rust/native-app-ui/: Cargo.toml  run-test.sh  run.sh
rust/native-app-ui/src/: main.rs  test.rs
rust/player/: Cargo.toml
rust/player/src/: main.rs
rust/wasm-app-ui/: .gitignore  Cargo.toml  build-wasm.sh  index.html  run-static-web.sh
rust/wasm-app-ui/src/: lib.rs
(+65 files in other folders)
