[workspace]
resolver = "3"
members = ["midi-model", "base-ui", "native-app-ui", "wasm-app-ui", "player",
  #"native_ui",
  # "wasm-ui"
]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[workspace.dependencies]
serde_json = "1.0.143"
serde = { version = "1.0.143", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.12.3"
lazy-regex = "3.6.0"

wasm-bindgen = "0.2.95"        # Добавлено: требуется для #[wasm_bindgen(start)]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)

eframe = "0.34.1"
egui = "0.34.1"
egui_extras =  "0.34.1"
# egui_extras = { workspace = true, features = ["image", "svg"] }

log = "0.4.27"
env_logger = "0.11.10"
egui-async = "0.3.4"

tokio = { version = "1.49", features = ["rt", "macros", "time", "sync", "test-util"] }
reqwest = { version = "0.13", features = ["json"], default-features = false }

futures-channel = "0.3"
futures = "0.3.32"

fastrand = "2.4.1"
derive_more = { version = "2.1.1", features = ["full"] }
