[package]
name = "base_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
midi-model = { path = "../midi-model" }

eframe.workspace = true
egui.workspace = true
log.workspace = true
egui-async.workspace = true

chrono.workspace = true
regex.workspace = true
lazy-regex.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-channel.workspace = true
futures.workspace = true
reqwest.workspace = true
fastrand.workspace = true
derive_more.workspace = true
egui_extras = { workspace = true, features = ["image", "svg"] }
async-trait = "0.1.89"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true
tokio.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false


[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# tokio.workspace = true
# tokio-test.workspace = true
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "test-util"] }
