[package]
name = "fs-client"
version = "0.1.0"
edition = "2024"

[dependencies]
fs = { path = "../fs" }
rhai.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true
tokio.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.49", features = ["full"] }
