[package]
name = "fs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
derive_more.workspace = true
async-trait.workspace = true
# wasm-bindgen.workspace = true
# wasm-bindgen-futures.workspace = true
futures-channel.workspace = true
futures.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true
tokio.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "test-util"] }
