[package]
name = "midi-model"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true

[dev-dependencies]
# tokio.workspace = true
# tokio-test.workspace = true
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "test-util"] }
