[package]
name = "wasm-app-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe.workspace = true
egui.workspace = true
log.workspace = true

base_ui = { path="../base-ui" }

[profile.release]
opt-level = 3
lto = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
